--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ main {
 }
 
 section {
+    display: none;
     padding: 20px;
     margin: 10px auto;
     max-width: 800px;
@@ -47,8 +48,8 @@ section {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-section h2 {
-    margin-top: 0;
+section.active {
+    display: block;
 }
 
 .gallery {
